--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>now-playing</title>
+  <title>Spotify "Now Playing" on GitHub!</title>
 </head>
 <body>
   <div id="root"></div>
